Fixing up responsiveness on smallest screen

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,14 +9,13 @@ body {
 	font-size: 18px;
 	font-family: Montserrat, 'Arial';
 	color: white;
-
 }
 
 .scoreboard {
 	width: 100%;
 	background-color: $secondary;
 	display: flex;
-	margin-bottom: 10%;
+	margin-bottom: 15px;
 
 	.score {
 		display: inline-block;
@@ -32,14 +31,16 @@ body {
 	margin: 0 auto;
 	width: 80%;
 	text-align: center;
-	height: 75vh;
+	/*height: 75vh;*/
 
 	.player {
 		background-color: $secondary;
 		height: 150px;
+		line-height: 50px;
+		border: 1px solid white;
 		margin: 0;
-		margin-bottom: 15px;
-		padding: 10px;
+		margin-bottom: 10px;
+		padding: 15px;
 	}
 }
 
@@ -178,13 +179,18 @@ input[type=number] {
 	.game {
 		.player {
 			height: 115px;
+			line-height: 30px;
 		}
 	}
 }
 
 @media only screen and (min-width: 480px) {
+	.scoreboard {
+		margin-bottom: 10%;
+	}
+
 	.game {
-		height: 75vh;
+		/*height: 70vh;*/
 		.player {
 			height: 300px;
 			display: flex;
@@ -206,7 +212,7 @@ input[type=number] {
 		.player {
 			width: 45%;
 			height: 400px;
-			margin: 0 auto;
+			margin: 0 auto 15px;
 			order: 1;
 			&:last-of-type {
 				order: 0;
